@@ -2,6 +2,8 @@
 
 	* lib/rubygems/server.rb:  Store off if we are returning Marshal
 	format before running =~ again.  Fixes bug reported by Chad Wooley.
+	* lib/rubygems/commands/stale_command.rb:  `gem stale` lists gems by
+	last access time.  Patch #20593 by Aaron Patterson.
 
 2008-06-09  Eric Hodel  <drbrain@segment7.net>
 
